# QuantNova

./: .gitignore  Agent.md  README.md  SKILL.md  SOUL.md  USER.md  pyproject.toml  requirements.txt  setup.py  test_auto_push.txt
agents/: debater.md  evolver.md
config/: config.json  positions.json  sync_config.json
data/: factor_experience.json  factor_knowledge.json  heartbeat_state.json  latest_heartbeat.json  latest_scan.json  market.db.wal  meta.db-shm  meta.db-wal  param_opt_atr_ratio.json  param_opt_ema_cross.json  param_opt_momentum.json  param_opt_rsi.json  param_opt_volatility.json  seed_factors.json  signal_params.json  test_cy.json  test_ic.json  tmp8_ll1sjo.json  trade_journal_2026-06-18.json
docs/:  futures_data_routing_design.md  CHANGELOG.md  CODE_STYLE.md  CONTRIBUTING.md  OPERATIONS.md  TESTING.md  USER_GUIDE.md  VERSION_MANAGEMENT.md  ai-investment-skills-analysis.md  architecture_diagram.html  architecture_layers.md  architecture_restructuring_plan.md  architecture_simplification_plan.md  auto_run_upgrade_plan.md  comparison_qlib_tradingagents.md  config_unification_plan.md  davey_comparison.md  davey_supplement_plan.md  dual_subsystem_architecture.md  dual_subsystem_implementation_plan.md  elegantrl_analysis.md  fundamental_analysis_upgrade.md  futures_data_routing_design.md  futures_subsystem_design.md  implementation_plan.md  market_abstraction_design.md  module_integration_design.md  multi_timeframe_vgrsi_factor_design.md  paper_implementation_guide.md  quantnova_system_overview.md  reasoning_adaptation_design.md  securities_data_routing_design.md  securities_subsystem_design.md  system_architecture_overview.md  tqsdk_indicators_integration.md  unified_memory_design.md  user_interaction_guide.md  v3_0_integration_analysis.md  vgrsi_walkforward_design.md  visibility_graph_operator_design.md  (+1 more)
reports/: futures_sync_report_2026-06-19.md
scripts/: __init__.py  run_evolution.py  run_full_analysis.py
tests/: test_carry_analyzer.py  test_circuit_breaker.py  test_e2e_pipeline.py  test_factor_evaluator.py  test_factor_evolution.py  test_factor_generator.py  test_factor_graph.py  test_factor_lifecycle.py  test_fundamental.py  test_indicator_hub.py  test_integration_fundamental.py  test_knowledge_ingestion.py  test_market_abstraction.py  test_memory_system.py  test_monte_carlo.py  test_multi_debater.py  test_multi_dimension_screener.py  test_multi_timeframe_vgrsi_factor.py  test_phase3_4_5.py  test_phase3_phase4.py  test_phase5_phase6.py  test_real_data_integration.py  test_reasoning_adaptation.py  test_report_parser.py  test_risk_integration.py  test_rl_base.py  test_rl_interface.py  test_scanner_integration.py  test_simple.py  test_strategy_incubator.py  test_strategy_portfolio.py  test_trajectory_analyzer.py  test_trend_scanner_config.py  test_unified_data_router.py  test_v3_0_integration.py  (+6 more)
(+210 files in other folders)
