[project]
name = "quantnova"
version = "2.0.0"
description = "推理重于规则的量化交易决策辅助系统 - 期货+证券双市场支持"
requires-python = ">=3.10"

# =============================================================================
# Ruff 配置（统一代码风格检查 + 自动修复）
# =============================================================================

[tool.ruff]
# 目标版本
target-version = "py310"

# 行宽限制
line-length = 120

# 排除目录
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    "data",
    "node_modules",
    ".venv",
    "venv",
]

# =============================================================================
# Ruff 规则配置
# =============================================================================

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort（导入排序）
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # Ruff 特有规则
]

# 忽略的规则
ignore = [
    "E501",   # 行宽由 formatter 处理
    "B008",   # 函数调用作为默认值（dataclass 常用）
    "SIM108", # 三元表达式（可读性问题）
    "N802",   # 函数名小写（有些 API 需要）
    "N803",   # 参数名小写
    "N806",   # 变量名小写
    "UP007",  # 使用 X | Y 代替 Optional（兼容性）
]

# =============================================================================
# isort 配置（导入排序）
# =============================================================================

[tool.ruff.lint.isort]
# 已知第三方库
known-third-party = [
    "pandas",
    "numpy",
    "scipy",
    "sklearn",
    "akshare",
    "duckdb",
    "tqsdk",
]

# 已知第一方库
known-first-party = [
    "trend_scanner",
]

# 导入分组顺序
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

# 每组之间空行数
lines-after-imports = 2

# =============================================================================
# 格式化器配置
# =============================================================================

[tool.ruff.format]
# 引号风格
quote-style = "double"

# 缩进风格
indent-style = "space"

# 代码单元分隔线
line-ending = "auto"

# =============================================================================
# 测试配置
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "benchmark: performance benchmark tests",
]

# =============================================================================
# MyPy 配置（类型检查，可选）
# =============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
